--- a/238-product-of-array-except-self.ipynb
+++ b/238-product-of-array-except-self.ipynb
@@ -17,30 +17,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOT A FULLY WORKING SOLUTION\n",
+    "\n",
     "\n",
     "class Solution:\n",
     "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
-    "        tempNum = 0\n",
-    "        tempIndex = 0\n",
-    "        tempAns = 1\n",
-    "        ans = []\n",
-    "        for i in range(len(nums)):\n",
-    "            tempNum = nums[i]\n",
-    "            tempIndex = i\n",
-    "            del nums[i]\n",
-    "            for num in nums:\n",
-    "                tempAns *= num\n",
-    "            ans.append(tempAns)\n",
-    "            tempAns = 1\n",
-    "            nums.insert(tempIndex, tempNum)\n",
-    "        return ans"
+    "        n = len(nums)\n",
+    "        result = [1] * n\n",
+    "        prefix = 1\n",
+    "        suffix = 1\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            result[i] *= prefix\n",
+    "            prefix *= nums[i]\n",
+    "        for i in range(n - 1, -1, -1):\n",
+    "            result[i] *= suffix\n",
+    "            suffix *= nums[i]\n",
+    "        \n",
+    "        return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<reversed object at 0x105e40b80>\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
